# node_soup

./: Cargo.toml  Design.md  LICENSE.txt  README.md  perf.data  perf.data.old  pubspec.yaml
.cargo/: config.toml
android/app/: build.gradle
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
renderer/: Cargo.toml
renderer/src/: lib.rs  renderer.rs
renderer/src/renderer/: fonts.rs  image_data.rs  rect_data.rs  render_engine.rs  shapes.rs  text.rs  uniform_buffer.rs  vertex_data.rs
renderer/src/renderer/render_engine/: clear.rs  create.rs  image_shader.wgsl  render.rs  render_icons.rs  render_images.rs  render_rects.rs  render_text.rs
src/: app.rs  constants.rs  engine.rs  init.rs  main.rs  renderer.rs  theme.rs  util.rs  visuals.rs  widgets.rs
src/app/: on_event.rs  render.rs
src/init/: events.rs  old_renderer.rs  render_device.rs  render_engine.rs  render_target.rs
src/renderer/: coordinates.rs  fonts.rs  icon_data.rs  pipeline_util.rs  rect_data.rs  render_device.rs  render_engine.rs  render_target.rs  shapes.rs  size.rs  text.rs  uniform_buffer.rs  vertex_data.rs
src/shaders/: shader.wgsl  shapes.wgsl
test/: widget_test.dart
theme/: Cargo.toml
totem/: Cargo.toml
totem/src/: app.rs  bytecode.rs  engine.rs  main.rs  renderer.rs  util.rs  widgets.rs
totem/src/app/: on_event.rs  render.rs
totem/src/engine/: blob.rs  layout.rs
totem/src/engine/blob/: constructors.rs  debug.rs  extractors.rs  freeze.rs  from.rs  index.rs  leak_unleak.rs  view.rs  view_wrappers.rs
totem/src/renderer/: coordinates.rs  fonts.rs  render_target.rs
totem/src/renderer/render_engine/: icon_shader.wgsl  icons.xcf  render.rs  render_icons.rs  render_rects.rs  render_text.rs
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+16 files in other folders)
