[package]
edition = "2021"
name = "renderer"
version = "0.1.0"

[lib]
crate_type = ["dylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ab_glyph = "0.2"
bytemuck = {version = "1.12.3", features = ["derive"]}
env_logger = "0.10.0"
image = {version = "0.24"}
itertools = "0.10.5"
log = "0.4.17"
maplit = "1.0.2"
pollster = "0.2.5"
theme = {path = "../theme"}
wgpu = "0.14.2"
wgpu_glyph = "0.18.0"
winit = "0.27.5"
