[package]
edition = "2021"
name = "totem"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.13.0"
cranelift = "0.92.0"
cranelift-jit = "0.92.0"
cranelift-module = "0.92.0"
env_logger = "0.10.0"
itertools = "0.10.5"
log = "0.4.17"
maplit = "1.0.2"
pollster = "0.2.5"
renderer = {path = "../renderer"}
theme = {path = "../theme"}
